// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outdial Call Component Rendering renders the component correctly 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r3:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="-1"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r3: react-aria-:r5:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:r5:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component allows special characters (* # +) from keypad 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text="Incorrect format."
      help-text-type="error"
      name="outdial-number-input"
      value="*"
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:rr:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:rr: react-aria-:rt:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:rt:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component calls startOutdial with correct payload when clicking call button 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value="123"
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:rl:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:rl: react-aria-:rn:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:rn:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="0"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component does not allow empty input 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r26:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r26: react-aria-:r28:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:r28:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component does not allow invalid characters when typing 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r17:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r17: react-aria-:r19:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:r19:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component has no ANI entry options when the entry list is empty 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r1d:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="-1"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="1"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r1d: react-aria-:r1f:"
          class="md-select-dropdown-input md-select-open"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:r1f:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          />
        </button>
        <div
          data-tippy-root=""
          id="tippy-8"
          style="z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px;"
        />
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component sets selected ani when an option is selected 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-up-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r1j:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="-1"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r1j: react-aria-:r1l:"
          class="md-select-dropdown-input md-select-open"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:r1l:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
        <div
          data-tippy-root=""
          id="tippy-9"
          style="z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
        >
          <span
            data-focus-scope-start="true"
            hidden=""
          />
          <div
            aria-labelledby="outdial-ani-option-select"
            class="md-select-popover md-modal-container-wrapper"
            data-arrow-orientation="vertical"
            data-color="primary"
            data-elevation="3"
            data-exclude-focus="true"
            data-padded="true"
            data-placement="bottom"
            data-round="50"
            style="max-height: none;"
            tabindex="-1"
          >
            <ul
              aria-labelledby="react-aria-:r1j:"
              class="md-select-menu-listbox md-menu-list-background-wrapper"
              data-color="primary"
              id="react-aria-:r1h:"
              role="listbox"
              tabindex="0"
            >
              <li
                aria-selected="false"
                class="md-list-item-base-wrapper"
                data-allow-text-select="false"
                data-disabled="false"
                data-interactive="true"
                data-key="none"
                data-padded="true"
                data-shape="rectangle"
                data-size="40"
                data-testid="outdial-ani-option-none"
                id="react-aria-:r1h:-option-none"
                role="option"
                tabindex="0"
              >
                <div
                  data-position="fill"
                  title="Enter Outdial ANI"
                >
                  <div
                    class="outdial-ani-option-name"
                  >
                    Enter Outdial ANI
                  </div>
                </div>
              </li>
              <li
                aria-selected="false"
                class="md-list-item-base-wrapper"
                data-allow-text-select="false"
                data-disabled="false"
                data-interactive="true"
                data-key="1"
                data-padded="true"
                data-shape="rectangle"
                data-size="40"
                data-testid="outdial-ani-option-1"
                id="react-aria-:r1h:-option-1"
                role="option"
                tabindex="-1"
              >
                <div
                  data-position="fill"
                  title="name 1"
                >
                  <div
                    class="outdial-ani-option-name"
                  >
                    name 1
                  </div>
                </div>
              </li>
              <li
                aria-selected="false"
                class="md-list-item-base-wrapper"
                data-allow-text-select="false"
                data-disabled="false"
                data-interactive="true"
                data-key="2"
                data-padded="true"
                data-shape="rectangle"
                data-size="40"
                data-testid="outdial-ani-option-2"
                id="react-aria-:r1h:-option-2"
                role="option"
                tabindex="-1"
              >
                <div
                  data-position="fill"
                  title="name 2"
                >
                  <div
                    class="outdial-ani-option-name"
                  >
                    name 2
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <span
            data-focus-scope-end="true"
            hidden=""
          />
        </div>
        <div
          aria-hidden="true"
          class="md-popover-backdrop"
        />
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component shows error help text when invalid characters are entered 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r11:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="0"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r11: react-aria-:r13:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:r13:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component updates input value when clicking keypad buttons 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:rf:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="-1"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:rf: react-aria-:rh:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:rh:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;

exports[`Outdial Call Component updates input value when typing directly 1`] = `
<div>
  <article
    class="keypad"
    data-testid="outdial-call-container"
  >
    <mdc-input
      class="outdial-input"
      data-testid="outdial-number-input"
      help-text=""
      help-text-type="default"
      name="outdial-number-input"
      value=""
    />
    <ul
      class="keys"
      data-testid="outdial-keypad-keys"
    >
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          1
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          2
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          3
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          4
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          5
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          6
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          7
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          8
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          9
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          *
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          0
        </mdc-button>
      </li>
      <li>
        <mdc-button
          class="key button"
          color="default"
          data-btn-type="pill"
          role="button"
          size="32"
          tabindex="0"
          type="button"
          variant="primary"
        >
          #
        </mdc-button>
      </li>
    </ul>
    <div
      class="outdial-ani-select-container"
    >
      <mdc-icon
        class="outdial-select-arrow-icon"
        data-testid="select-arrow-icon"
        name="arrow-down-bold"
        title=""
      />
      <div
        class="outdial-input md-select-wrapper"
        id="outdial-ani-option-select"
        style="--local-width: 100%;"
      >
        <label
          id="react-aria-:r9:"
        >
          <mdc-text
            class="md-text-wrapper"
            tagname="p"
            type="body-large-regular"
          >
            Outdial ANI
          </mdc-text>
        </label>
        <div
          aria-hidden="true"
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            style="font-size: 16px;"
            tabindex="-1"
            type="text"
          />
          <label>
            Outdial ANI
            <select
              size="3"
              tabindex="-1"
            >
              <option />
              <option
                value="none"
              >
                Enter Outdial ANI
              </option>
              <option
                value="1"
              >
                name 1
              </option>
              <option
                value="2"
              >
                name 2
              </option>
            </select>
          </label>
        </div>
        <button
          aria-controls="outdial-ani-option-select"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="react-aria-:r9: react-aria-:rb:"
          class="md-select-dropdown-input"
          data-testid="outdial-ani-option-select"
          id="outdial-ani-option-select"
          role="combobox"
          type="button"
        >
          <span
            class="md-select-selected-item-wrapper"
            id="react-aria-:rb:"
          >
            Enter Outdial ANI
          </span>
          <span
            aria-hidden="true"
            class="md-select-icon-wrapper"
          >
            <div
              class="md-icon-wrapper"
            >
              <div
                class="md-icon-not-found"
                data-autoscale="false"
                data-scale="16"
              >
                ⃞
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <mdc-button
      aria-disabled="true"
      class="outDialCallButton"
      color="default"
      data-btn-type="icon"
      data-testid="outdial-call-button"
      disabled=""
      prefix-icon="handset-regular"
      role="button"
      size="40"
      tabindex="-1"
      type="button"
      variant="primary"
    />
  </article>
</div>
`;
